--- a/blog/_layouts/post.html
+++ b/blog/_layouts/post.html
@@ -2,26 +2,24 @@
 layout: default
 ---
 
-<p class="meta">
-  {{ page.date | date: "%B %d, %Y" }} 
-  <a href="/">
-    <i class="home fa fa-home"></i>
-  </a>
-</p>
-
-<h1 class="title">{{ page.title }}</h1>
-
-<div id="post">
+<div class="post">
+  <h1 class="post-title">{{ page.title }}</h1>
+  <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
 
-<div id="related">
-  <h3>Related Posts</h3>
-  <ul class="posts">
-    {% for post in site.related_posts limit:3 %}
-    <li>
-      <span>{{ post.date | date_to_string }} &raquo;</span> <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-    {% endfor %}
-  </ul>
-</div>
+<!-- <div class="related"> -->
+<!--   <h2>Related Posts</h2> -->
+<!--   <ul class="related-posts"> -->
+<!--     {% for post in site.related_posts limit:3 %} -->
+<!--       <li> -->
+<!--         <h3> -->
+<!--           <a href="{{ post.url }}"> -->
+<!--             {{ post.title }} -->
+<!--             <small>{{ post.date | date_to_string }}</small> -->
+<!--           </a> -->
+<!--         </h3> -->
+<!--       </li> -->
+<!--     {% endfor %} -->
+<!--   </ul> -->
+<!-- </div> -->
